--- a/index.html
+++ b/index.html
@@ -4,22 +4,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width; initial-scale=1.0">
 <meta name="description" content="Experts in Engineering the Software Systems for Data ExChange">
-<meta name="keywords" content="Maettaan, Technology, Software, Systems, Data ExChange">
 <style>
-body{
-margin:0vw;
-position:absolute;
-top:5vw;
-width:100vw;
-color:#ffffff;
-background-color:#000000;
-font-size:1.8vw;
-}
-header{
-text-align:center;
-color:#9acd32
-}
-strong{color:#ffffff;font-size:12vw;}
+body{margin:0vw;position:absolute;top:5vw;width:100vw;color:#ffffff;background-color:#000000;font-size:1.8vw}
+header{text-align:center;color:#9acd32}
+strong{color:#ffffff;font-size:12vw}
 h3{color:#FFD700}
 </style>
 <title>Maettaan Technology | Software Systems for Data ExChange</title>
