--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ h3{color:#FFD700}
 <h1><strong>MAETTAAN</strong><br/>Technology for(;;){Data ExCHANGE}</h1>
 <h3><br/><br/>Everything has its own demand and supply.<br/>
 But their common problem is how to exchange it with them in an excellent way.<br/>
-That's why the 'Maettaan Technology' exists to supply the MaettaanBSD-1.0.0.tzst to them with demand of 1 Million+ USD</h3>
+That's why the 'Maettaan Technology' exists to supply the <br/>MaettaanBSD-1.0.0.tzst<br/> to them with demand of 1 Million+ USD</h3>
 </header>
 </body>
 </html>
