--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width; initial-scale=1.0">
 <meta name="description" content="Experts in Engineering the Software Systems for Data ExChange">
 <style>
@@ -16,7 +15,7 @@ h3{color:#FFD700}
 <header>
 <h1><strong>MAETTAAN</strong><br/>Technology for(;;){Data ExCHANGE}</h1>
 <h3><br/><br/>Everything has its own demand and supply.<br/>
-But their common problem is how to exchange it within them in an excellent way.<br/>
+But their common problem is, how to exchange it within them, in an excellent way.<br/>
 That's why the 'Maettaan Technology' exists to supply the <br/>MaettaanBSD<br/> to them with demand of 1 Million+ USD</h3>
 </header>
 </body>
