--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 <head>
 <meta name="viewport" content="width=device-width; initial-scale=1.0">
 <meta name="description" content="Experts in Engineering the Software Systems for Data ExChange">
@@ -14,9 +13,8 @@ h3{color:#FFD700}
 <body>
 <header>
 <h1><strong>MAETTAAN</strong><br/>Technology for(;;){Data ExCHANGE}</h1>
-<h3><br/><br/>Everything has its own demand and supply.<br/>
-But their common problem is, how to exchange it within them, in an excellent way.<br/>
+<h3><br/><br/>Everything has its demand and supply.<br/>
+However, their common problem is how to exchange it within an excellent way.<br/>
 That's why the 'Maettaan Technology' exists to supply the <br/>MaettaanBSD<br/> to them with demand of 1 Million+ USD</h3>
 </header>
 </body>
-</html>
