--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@ h3{color:#FFD700}
 <h1><strong>MAETTAAN</strong><br>Technology for(;;){Data ExCHANGE}</h1>
 <h3><br><br>Everything has its demand and supply.<br>
 However, their common problem is how to exchange it within an excellent way.<br>
-That's why the 'Maettaan Technology' exists to supply the MAETTAAN to them with its demand</h3>
+That's why the 'Maettaan Technology' exists to supply the MAETTAAN to them with its demand.</h3>
 </header>
 </body>
