--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@ header{text-align:center;color:#9acd32}
 <title>Maettaan Technology | Software Systems for Data ExChange</title>
 <header>
 <h1><strong style="color:#ffffff;font-size:12vw">MAETTAAN</strong><br>Technology for(;;){Data ExCHANGE}</h1>
-<h3 style="color:#FFD700;"><br><br>Everything has its demand and supply.<br>However, their common problem is how to exchange it within an excellent way.<br>That's why the 'Maettaan Technology' exists to supply the MAETTAANIO to them with its demand.</h3>
+<h3><br><br>Everything has its demand and supply.<br>However, their common problem is how to exchange it within an excellent way.<br>That's why the 'Maettaan Technology' exists to supply the MAETTAANIO to them with its demand.</h3>
 </header>
