--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 body{margin:0vw;position:absolute;top:5vw;width:100vw;color:#ffffff;background-color:#000000;font-size:1.5vw}
 header{text-align:center;color:#9acd32}
 </style>
-<title>Maettaan Technology | Software Systems for Data ExChange</title>
+<title>MaeTTaaN TechnoLogY | Software Systems for Data ExChange</title>
 <header>
 <h1><strong style="color:#ffffff;font-size:12vw">MAETTAAN</strong><br>Technology for(;;){Data ExCHANGE}</h1>
 <h3><br><br>Everything has its demand and supply.<br>However, their common problem is how to exchange it within an excellent way.<br>That's why the 'Maettaan Technology' exists to supply the MaeTTaaN:IO to them with its demand.</h3>
