--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width; initial-scale=1.0">
-<meta name="description" content="Experts in Engineering the Software Systems for Data ExChange">
+<meta name="description" content="Experts in Engineering the Software System of Systems Technology for Data ExChange">
 <style>
 body{margin:0vw;position:absolute;top:5vw;width:100vw;color:#ffffff;background-color:#000000;font-size:1.5vw}
 header{text-align:center;color:#9acd32}
