--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@ header{text-align:center;color:#9acd32}
 </style>
 <title>MaeTTaaN TechnoLogY for(;;){Data ExCHANGE}</title>
 <header>
-<h1><strong style="color:#ffffff;font-size:12vw">MaeTTaaN</strong><br>Technology for(;;){Data ExCHANGE}</h1>
+<h1><strong style="color:#ffffff;font-size:12vw">MaeTTaaN</strong><br>TechnoLogY for(;;){Data ExCHANGE}</h1>
 <h3><br><br>Everything has its demand and supply.<br>However, their common problem is how to exchange it within an excellent way.<br>That's why the 'MaeTTaaN TechnoLogY' exists to supply the MaeTTaaN:IO to them with its demand.</h3>
 </header>
